--- a/nft-staking/programs/nft-staking/Cargo.toml
+++ b/nft-staking/programs/nft-staking/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "anchor-escrow"
+name = "nft-staking"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "anchor_escrow"
+name = "nft_staking"
 
 [features]
 default = []
@@ -14,9 +14,8 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-#idl-build = ["anchor-lang/idl-build"] replaced with below to try and fix error in anchor test (Building IDL failed)
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
-anchor-spl = "0.30.1"
+anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
+anchor-spl = {version = "0.30.1", features = ["metadata"]}
